--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "poppins", sans-serif;
     line-height: 1.5;
     font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -13,56 +9,77 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    margin: 0;
     display: flex;
-    place-items: center;
+    align-items: center;
+    justify-content: center;
     min-width: 320px;
-    min-height: 100vh;
-}
-
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
+    height: 100vh;
     background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    /* background-color: #131313; */
+    color: white;
 }
 
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
-    }
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar-card {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 300px;
+    height: 150px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 16px;
+    padding: 10px;
+    font-size: 20px;
+    background-color: purple;
+}
+
+.navbar-header {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.navbar-statistics {
+    margin-top: 22px;
+    margin-bottom: 12px;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.navbar-card:nth-child(5) {
+    z-index: 3;
+    position: absolute;
+    bottom: -220px;
+}
+
+.navbar-card:nth-child(4) {
+    z-index: 2;
+    position: absolute;
+    bottom: -110px;
+}
+
+nav {
+    position: relative;
+}
+
+.nav-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
