--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ a {
     transition: all 0.3s;
 }
 
+.hide {
+    display: none;
+}
+
 .navbar-card:first-child {
     cursor: auto;
 }
@@ -67,6 +71,7 @@ a {
     color: #000;
     text-align: center;
     background-color: #fff;
+    /* display: none; */
 }
 
 .navbar-header a {
@@ -78,6 +83,7 @@ a {
     margin-bottom: 12px;
     font-size: 20px;
     padding: 10px;
+    /* display: none; */
 }
 
 .navbar-card:nth-child(4) {
