--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -8,7 +8,7 @@
     font-size: 20px;
     background-color: hsl(249, 57%, 53%);
     cursor: pointer;
-    transition: all 0.3s;
+    transition: transform 0.3s;
 
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(4px);
