implemented wordDetails css as well as changes to wordDetails.jsx

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -46,3 +46,8 @@
 .navbar-signout:hover {
     transform: scale(1.05);
 }
+
+.navbar-container {
+    display: flex;
+    justify-content: center;
+}
