--- a/src/components/WordDetails/WordDetails.css
+++ b/src/components/WordDetails/WordDetails.css
@@ -1,3 +1,9 @@
+.word-details-parent-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .word-details-card {
     display: flex;
     flex-direction: column;
@@ -7,7 +13,6 @@
     padding: 20px;
     font-size: 20px;
     background-color: hsl(249, 57%, 58%);
-    cursor: pointer;
     transition: all 0.3s;
     color: #fff;
 
@@ -50,6 +55,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.3s;
+    cursor: pointer;
 }
 
 .fa-volume-low:hover,
