--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -51,3 +51,62 @@
     display: flex;
     justify-content: center;
 }
+
+.navbar-public-container ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 18px;
+}
+
+.navbar-public-container li {
+    width: 400px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(249, 57%, 53%);
+    font-size: 24px;
+    transition: all 0.3s;
+    font-weight: 500;
+}
+
+.navbar-public-container li:hover {
+    transform: scale(1.05);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.8);
+}
+
+.navbar-public-container li:nth-child(2) {
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.navbar-public-container li:nth-child(4) {
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+.navbar-public-container a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar-public-container h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.app-title {
+    font-size: 60px;
+    color: hsl(249, 57%, 53%);
+    display: inline-block;
+    transition: all 0.3s;
+}
+
+.app-title:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
